@@ -14,9 +14,7 @@ import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.CaseManagementOrder;
 import uk.gov.hmcts.reform.fpl.model.Direction;
 import uk.gov.hmcts.reform.fpl.model.HearingBooking;
-import uk.gov.hmcts.reform.fpl.model.Other;
 import uk.gov.hmcts.reform.fpl.model.Representative;
-import uk.gov.hmcts.reform.fpl.model.Respondent;
 import uk.gov.hmcts.reform.fpl.model.Solicitor;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.common.JudgeAndLegalAdvisor;
@@ -50,6 +48,7 @@ import static org.apache.commons.lang3.StringUtils.defaultIfBlank;
 import static org.apache.commons.lang3.StringUtils.defaultString;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.springframework.util.CollectionUtils.isEmpty;
+import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.RECITALS;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.OTHERS;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.PARENTS_AND_RESPONDENTS;
 import static uk.gov.hmcts.reform.fpl.service.CaseDataExtractionService.EMPTY_PLACEHOLDER;
@@ -107,7 +106,7 @@ public class CMODocmosisTemplateDataGenerationService extends DocmosisTemplateDa
 
         HearingBooking nextHearing = null;
 
-        if (order.getNextHearing() != null && order.getNextHearing().getId() != null) {
+        if (order.getNextHearing() != null && order.getNextHearing().getId() != null && !order.isDraft()) {
             List<Element<HearingBooking>> hearingBookings = caseData.getHearingDetails();
             UUID nextHearingId = order.getNextHearing().getId();
             nextHearing = hearingBookingService.getHearingBookingByUUID(hearingBookings, nextHearingId);
@@ -127,7 +126,7 @@ public class CMODocmosisTemplateDataGenerationService extends DocmosisTemplateDa
         }
 
         List<Map<String, String>> recitals = buildRecitals(order.getRecitals());
-        cmoTemplateData.put("recitals", recitals);
+        cmoTemplateData.put(RECITALS.getKey(), recitals);
         cmoTemplateData.put("recitalsProvided", isNotEmpty(recitals));
 
         cmoTemplateData.putAll(getSchedule(order));
@@ -142,10 +141,6 @@ public class CMODocmosisTemplateDataGenerationService extends DocmosisTemplateDa
             return caseData.getCaseManagementOrder();
         }
 
-        if (caseData.getCmoToAction() != null) {
-            return caseData.getCmoToAction();
-        }
-
         return null;
     }
 
@@ -155,21 +150,20 @@ public class CMODocmosisTemplateDataGenerationService extends DocmosisTemplateDa
 
         List<Map<String, Object>> representativesInfo = new ArrayList<>();
         List<Element<Representative>> representatives = caseData.getRepresentatives();
-        List<Respondent> respondents = ElementUtils.unwrapElements(caseData.getRespondents1());
-        List<Other> others = caseDataExtractionService.getOthers(caseData);
 
         representativesInfo.add(getApplicantDetails(applicantName, solicitor));
 
-        respondents.stream()
+        ElementUtils.unwrapElements(caseData.getRespondents1()).stream()
             .filter(respondent -> isNotEmpty(respondent.getRepresentedBy()))
-            .forEach(respondent -> representativesInfo.add(ImmutableMap.of(
+            .forEach(respondent -> representativesInfo.add(Map.of(
                 NAME, defaultIfNull(respondent.getParty().getFullName(), EMPTY),
                 REPRESENTED_BY, getRepresentativesInfo(respondent, representatives))
             ));
 
-        others.stream()
+
+        caseData.getAllOthers().stream()
             .filter(other -> isNotEmpty(other.getRepresentedBy()))
-            .forEach(other -> representativesInfo.add(ImmutableMap.of(
+            .forEach(other -> representativesInfo.add(Map.of(
                 NAME, defaultIfNull(other.getName(), EMPTY),
                 REPRESENTED_BY, getRepresentativesInfo(other, representatives))));
 
